chore: fixed video on mobile

--- a/assets/css/partials/media-query.scss
+++ b/assets/css/partials/media-query.scss
@@ -80,6 +80,14 @@
       font-size: 15px!important;
     }
   }
+
+  .demo-video-modal {
+    top: 30%;
+  }
+
+  .hero-team-play-demo-icon {
+    top: 55%!important;
+  }
 }
 
 @media screen and (max-width: 1080px) {
